surfraw (2.2.8-1) unstable; urgency=low

  * New upstream version.
  * debian/rules:
    + hardcode AWK as awk (Closes: #608967).
    + use dh_prep instead of dh_clean -k.
  * debian/control:
    + Build-Depends: bump debhelper dependency to (>= 7).
    + Standards-Version: 3.9.1.
    + surfraw-extra: convert Conflicts: to Breaks:.
  * debian/source/format: explicitly specify 1.0 source format.

 -- Ian Beckwith <ianb@debian.org>  Thu, 13 Jan 2011 18:39:23 +0000

surfraw (2.2.7-1) unstable; urgency=low

  * New upstream version.
    + fixed imdb elvi (Closes: #577263).
  * Standards-Version: 3.8.4 (no changes).
  * Add ${misc:Depends} to dependencies.

 -- Ian Beckwith <ianb@debian.org>  Fri, 16 Apr 2010 20:43:27 +0100

surfraw (2.2.6-1) unstable; urgency=low

  * New upstream version.
    + Only use first matching bookmark (Closes: #530786).
    + Fix debsec (patch from Moritz Muehlenhoff) (Closes: #550741).
  * Remove Moritz from Uploaders (per #550741), thanks for your work!.
  * debian/rules: call dh_installexamples to install examples/ dir.
  * debian/control:
    + update vcs- fields to point to new git repo.
    + Standards-Version: 3.8.3 (No changes).
    + add Recommends: curl | wget | libwww-perl for -o.
    + Remove Conflicts/Replaces: surfaw, this transition was complete
      many releases ago.

 -- Ian Beckwith <ianb@debian.org>  Fri, 20 Nov 2009 03:34:34 +0000

surfraw (2.2.5-1) unstable; urgency=low

  * New upstream version.
  * Removed Thomas Smith from Uploaders (Closes: #519378).
    Thanks for your work!.
  * Updated my email address in Uploaders.
  * Fixed VCS-Browser URL (Closes: #528299).
  * Removed DM-Upload-Allowed header.
  * Standards-Version: 3.8.1 (no changes).

 -- Ian Beckwith <ianb@debian.org>  Wed, 13 May 2009 02:09:49 +0100

surfraw (2.2.4-1) unstable; urgency=low

  * New upstream version.
  * postrm: add 'set -e'.
  * debian/copyright:
    + Update copyright years to include 2009.