@@ -82,17 +82,3 @@ binary-indep: build install
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install configure
-
-
-
-
-
-
-
-
-
-
-
-
-
-
