@@ -1,4 +1,3 @@
 /usr/bin/opensearch*
-/usr/lib/surfraw/opensearch
-/usr/share/man/man1/opensearch*
+/usr/share/man/man1/opensearch-*
 
